On Viewport Render, Camera BackGround Image is misaligned #62095

Closed
opened 2019-03-01 19:35:39 +01:00 by Tomotsugu Nakamura · 7 comments

System Information
Operating system:windows10
Graphics card:Nvidia GeForce GTX960M
Blender Version
Broken:blender-2.80.0-git.e795dd4a20a1 and older

When use Camera BackGround image on 3DView.
On CameraView, Viewport Render drawed image is misaligned.

It seems that the image should be arranged in the view area of the camera
but the image is drawn based on the whole editor
image.png

**System Information** Operating system:windows10 Graphics card:Nvidia GeForce GTX960M **Blender Version** Broken:blender-2.80.0-git.e795dd4a20a1 and older When use Camera BackGround image on 3DView. On CameraView, Viewport Render drawed image is misaligned. It seems that the image should be arranged in the view area of the camera but the image is drawn based on the whole editor ![image.png](https://archive.blender.org/developer/F6737291/image.png)

Added subscriber: @yukimituki11

Added subscriber: @yukimituki11

#62264 was marked as duplicate of this issue

#62264 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2019-03-02 15:30:55 +01:00
[viewport_render.blend](https://archive.blender.org/developer/F6745439/viewport_render.blend)

Added subscribers: @JacquesLucke, @ideasman42, @Hjalti

Added subscribers: @JacquesLucke, @ideasman42, @Hjalti

This issue was referenced by 0ba143a1d6

This issue was referenced by 0ba143a1d67561f581fcfa7bc7a10e38a44efefe

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62095
No description provided.