Fix T62095: OpenGL render camera image alignment